# assemblies

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  animator.py  brain.py  brain_util.py  build_cuda_simple.py  image_learner.py  language_brain_simulation.md  learner.py  million_scale_applications.md  parser.py  plan.MD  pyproject.toml  recursive_parser.py  requirements.txt  run_turing_sim.py  simulations.py  simulations_test.py  test_cpp_performance.py  test_vs_cuda_env.py  tests.py  turing_sim.py
.claude/: settings.local.json
.github/workflows/: publish.yml
animations/experiment 9 (500 samples) CIFAR10/: results.txt
benchmarks/: profile_operations.py
cpp/: README.md
cpp/build_scripts/: README_BUILD.md  build.bat  build.env.example
cpp/core_cpp/: pybind11_wrapper.cpp
cpp/cuda_kernels/: assemblies_cuda_brain.cu  assemblies_cuda_brain_optimized.cu  assemblies_cuda_kernels.cu  assemblies_cuda_kernels_optimized.cu  assemblies_cuda_memory.cu  assemblies_cuda_memory_optimized.cu  assemblies_cuda_optimized.h  assemblies_cuda_wrapper.cu  assembly_projection_kernel.cu  build_all.bat  build_dense_kernels.bat  build_nemo_kernels.bat  build_projection_kernel.bat  cuda_brain.h  cuda_kernels.cu  dense_assembly_kernels.cu  nemo_implicit_kernels.cu  simple_cuda_brain.cu  sparse_assembly_kernels.cu  sparse_assembly_kernels_v2.cu
cpp/documentation/: assembly_calculus_implications_summary.md  gpu_acceleration_analysis.md  key_papers_draft.md  paper_ecosystem_draft.md  research_questions_detailed.md  research_roadmap_scientific.md  scientific_critique_and_reframe.md
cpp/python_implementations/: README_ORGANIZATION.md
cpp/tests/: debug_memory_test.py  debug_scipy_sparse.py  test_cupy_simple.py  test_extreme_scale_cuda.py  test_gpu_memory_cuda_brain.py  test_ms_per_step.py
docs/: README.md  api.md  architecture.md  contributing.md  documentation_style.md  packaging.md  project_context.md  references.md  scientific_status.md  supported_surfaces.md
examples/: 01_basic_assembly_calculus.py  README.md
examples/notebooks/: 01_basic_assembly_calculus.ipynb  README.md
experiments/: README.md
experiments/hyperdimensional_assemblies/: RIGOROUS_PROOF_SUMMARY.md  assembly_hdc_investigation.py  hdc_assembly_hybrid_brain.py  mathematical_catalog_hdc_assembly_convergence.py  real_hdc_assembly_calculus.py  rigorous_proof_assembly_calculus.py  rigorous_proof_comprehensive_stress_test.py  rigorous_proof_information_preservation.py  rigorous_proof_sequence_encoding.py  rigorous_proof_similarity_computation.py  simple_hdc_assembly_demo.py  simple_working_solution.py  standalone_hdc_assembly_demo.py  test_final_fixed.py  test_fixes.py  test_truly_fixed.py
image_learning_experiment/: config.py  main.py
image_learning_experiment/brain_module/: __init__.py  area.py  core.py  utils.py
image_learning_experiment/data/: cifar10.py  data_loader.py
image_learning_experiment/evaluation/: evaluator.py
image_learning_experiment/models/: cifar_brain.py
image_learning_experiment/training/: experiment_runner.py
image_learning_experiment/visualization/: animator.py
legacy/: README.md  __init__.py
legacy/experiments/: README.md
legacy/root_modules/: __init__.py  brain_util.py  image_learner.py  recursive_parser.py
legacy/scripts/: README.md  __init__.py
neural_assemblies/: __init__.py
neural_assemblies/area_management/: __init__.py
neural_assemblies/assembly_calculus/: __init__.py  fiber.py  fsm.py  next_token.py  ops.py  parser.py  pfa.py  trace.py  transitions.py
neural_assemblies/compute/: README.md  __init__.py  explicit_projection.py  image_activation.py  winner_policies.py  winner_selection.py
neural_assemblies/constants/: default_params.py
neural_assemblies/core/: README.md  area.py  backend.py  connectome.py  cuda_engine.py  cupy_engine.py  engine.py  stimulus.py
neural_assemblies/experiments/: __init__.py
neural_assemblies/input_processing/: __init__.py
neural_assemblies/language/: README.md  __init__.py  debugger.py  grammar_rules.py  language_areas.py  parser.py
neural_assemblies/learning/: __init__.py
neural_assemblies/lexicon/: README.md  assembly_language_learner.py  build_lexicon.py  gpu_assembly_learner.py  lexicon_manager.py  test_lexicon_and_curriculum.py
neural_assemblies/nemo/: README.md  __init__.py  test.py
neural_assemblies/simulation/: README.md  __init__.py  advanced_simulations.py  association_simulator.py  association_simulator_cpp.py  density_simulator.py  merge_simulator.py  pattern_completion.py  plotting_utils.py  projection_simulator.py  turing_simulations.py
neural_assemblies/tests/: __init__.py  test_assembly_calculus.py  test_autonomous_recurrence.py  test_backend.py  test_computation_value.py  test_cuda_kernels.py  test_docs_examples_smoke.py  test_emergent_parser.py  test_engine_parity.py  test_explicit_projection.py  test_fsm.py  test_language_parsing.py  test_lri.py  test_pfa.py  (+24 more)
research/: ASSEMBLY_CALCULUS_RESEARCH.md  CRITICAL_ANALYSIS.md  CRITICAL_LANGUAGE_LEARNING_ANALYSIS.md  CRITICAL_SCIENTIFIC_ANALYSIS.md  DISCRETE_ASSEMBLY_CALCULUS.md  FINDINGS_SUMMARY.md  GETTING_STARTED.md  GPU_ACCELERATION_RESULTS.md  GRAMMATICAL_STRUCTURE_ARCHITECTURE.md  HONEST_ASSESSMENT.md  LANGUAGE_LEARNING_ANALYSIS.md  README.md  SCALABLE_NEMO_SUMMARY.md  SCIENTIFIC_VALIDATION_RESULTS.md  SPIKING_FOUNDATIONS.md  STRUCTURE_COMPLETE.md  TEXT_GENERATION_ARCHITECTURE.md  open_questions.md  registry.json
scripts/: animator.py  build_cuda_simple.py  overlap_sim.py  turing_sim.py
src/: __init__.py  area.py  brain.py  connectome.py  constants.py  image_learner.py  utils.py
tests/: README.md  test_brain_core.py  test_legacy_archived_layout.py  test_legacy_root_shims.py  test_root_cleanliness.py  test_simulations.py
(+1105 files in other folders)
