[project]
name = "assemblies"
version = "0.2.0"
description = "Neural Assembly Simulation - Assembly Calculus Implementation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pptree>=3.1",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=12.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = [
    "assemblies[gpu,dev]",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests", "src/tests", "research/experiments"]
python_files = ["test_*.py", "*_test.py"]
