[project]
name = "assemblies"
version = "0.2.0"
description = "Neural Assembly Simulation - Assembly Calculus Implementation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pptree>=3.1",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda13x>=13.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = [
    "assemblies[gpu,dev]",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
    "cupy-cuda13x>=13.0.0",
    "torch>=2.0.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["temp/", ".venv/", "*.egg-info"]

[tool.ruff.lint]
# Start with pyflakes (F) errors that catch real bugs.
# E rules are style — enable selectively to avoid noise.
select = [
    "F401",   # unused imports
    "F541",   # f-string without placeholders
    "F811",   # redefined unused name
    "F841",   # unused variable
    "E722",   # bare except
    "E401",   # multiple imports on one line
]
# Ignore import-star issues in __init__.py files and notebooks
per-file-ignores = {"__init__.py" = ["F401"], "*.ipynb" = ["F401", "E402"]}

[tool.pytest.ini_options]
testpaths = ["tests", "src/tests", "research/experiments"]
python_files = ["test_*.py", "*_test.py"]
